time-data split

--- a/Data-Preprocessing/005_Split.ipynb
+++ b/Data-Preprocessing/005_Split.ipynb
@@ -25,7 +25,7 @@
     "    최소한의 교차수를 사용하길 추천.\n",
     "\n",
     "> #### 홀드아웃 검증 (Hold-out validation)\n",
-    "교차검증용 데이터와는 별개로 최종 정확도 검증을 위한 데이터를 준비해두고, 이 데이터를 사용하ㅕ 모델의 정확도를 검증해 해결.\n",
+    "교차검증용 데이터와는 별개로 최종 정확도 검증을 위한 데이터를 준비해두고, 이 데이터를 사용하여 모델의 정확도를 검증해 해결.\n",
     "\n",
     "> #### 과학습(over learning)\n",
     "과학습이란 학습 데이터에 과도하게 의존하게 되어 학습 데이터 외에는 제대로 된 예측을 할 수 없는 것을 말한다.\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,12 +208,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 대상 행 번호 리스트를 생성한다.\n",
     "row_no_list=list(range(len(train_target)))     # train 800개, test 200개"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "800"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(row_no_list)"
    ]
   },
   {
@@ -378,6 +398,563 @@
    "source": [
     "train_cv_no"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* train_data와 train_target을 학습 데이터로, \n",
+    "* test_data와 test_target을 검증 데이터로 머신러닝 모델을 구축하고 검증한다.\n",
+    "\n",
+    "* 교차 검증 결과를 정리한다.\n",
+    "\n",
+    "* train을 학습 데이터로, private_test를 검증 데이터로 머신러닝 모델을 구축하고 검증한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------\n",
+    "## 5.2 모델 검증을 위한 시간 데이터 분할\n",
+    "교차 검증으로 모델의 정확도가 부당하게 높아지는 경우가 많아 시간 데이터를 이용한 단순한 교차 검증은 유효하지 않다.\n",
+    "\n",
+    "* 해결 방법 : 학습 데이터와 검증 데이터를 시간축을 기준으로 이동하면서 검증하는 방법.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1. 학습 및 검증을 위한 시간 데이터 준비\n",
+    "학습 데이터와 검증 데이터를 시간축을 기준으로 한 달씩 이동하면서 생성한다.\n",
+    "* 학습 기간은 24개월, 검증 기간은 12개월, 이동하는 기간은 12개월로 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>sales_amount</th>\n",
+       "      <th>customer_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>7191240</td>\n",
+       "      <td>6885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-02</td>\n",
+       "      <td>6253663</td>\n",
+       "      <td>6824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-03</td>\n",
+       "      <td>6868320</td>\n",
+       "      <td>7834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-04</td>\n",
+       "      <td>7147388</td>\n",
+       "      <td>8552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>8755929</td>\n",
+       "      <td>8171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  year_month  sales_amount  customer_number\n",
+       "0    2010-01       7191240             6885\n",
+       "1    2010-02       6253663             6824\n",
+       "2    2010-03       6868320             7834\n",
+       "3    2010-04       7147388             8552\n",
+       "4    2010-05       8755929             8171"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_index_tb=pd.read_csv('./data/monthly_index.csv',encoding='UTF-8')\n",
+    "monthly_index_tb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_window_start 에 맨 처음 학습 데이터의 시작 행 번호를 지정한다.\n",
+    "train_window_start =1\n",
+    "\n",
+    "# train_window_end에 맨 처음 학습 데이터의 종료 행 번호를 지정한다.\n",
+    "train_window_end=24\n",
+    "\n",
+    "# horizon에 검증 데이터의 데이터 수를 지정한다.\n",
+    "horizon = 12\n",
+    "\n",
+    "# skip 에 이동할 데이터 수를 설정한다.\n",
+    "skip=12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>sales_amount</th>\n",
+       "      <th>customer_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>7191240</td>\n",
+       "      <td>6885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-02</td>\n",
+       "      <td>6253663</td>\n",
+       "      <td>6824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-03</td>\n",
+       "      <td>6868320</td>\n",
+       "      <td>7834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-04</td>\n",
+       "      <td>7147388</td>\n",
+       "      <td>8552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>8755929</td>\n",
+       "      <td>8171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  year_month  sales_amount  customer_number\n",
+       "0    2010-01       7191240             6885\n",
+       "1    2010-02       6253663             6824\n",
+       "2    2010-03       6868320             7834\n",
+       "3    2010-04       7147388             8552\n",
+       "4    2010-05       8755929             8171"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 연월을 기준으로 데이터를 정렬한다.\n",
+    "monthly_index_tb.sort_values(by='year_month').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(monthly_index_tb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    # 검증 데이터의 종료 행 번호를 계산한다.\n",
+    "    test_window_end = train_window_end + horizon\n",
+    "    \n",
+    "    # 행 번호를 지정하여 원본 데이터에서 학습 데이터를 구한다.\n",
+    "    # train_window_start를 1로 고정하면 학습 데이터를 늘려가는 검증으로 변환할 수 있다. \n",
+    "    train = monthly_index_tb[train_window_start:train_window_end]\n",
+    "    \n",
+    "    test = monthly_index_tb[(train_window_end + 1) : test_window_end]\n",
+    "    \n",
+    "    if test_window_end >= len(monthly_index_tb.index):\n",
+    "        break\n",
+    "    train_window_start += skip\n",
+    "    train_window_end += skip\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>sales_amount</th>\n",
+       "      <th>customer_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-02</td>\n",
+       "      <td>6253663</td>\n",
+       "      <td>6824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-03</td>\n",
+       "      <td>6868320</td>\n",
+       "      <td>7834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-04</td>\n",
+       "      <td>7147388</td>\n",
+       "      <td>8552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>8755929</td>\n",
+       "      <td>8171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2010-06</td>\n",
+       "      <td>8373124</td>\n",
+       "      <td>8925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2010-07</td>\n",
+       "      <td>9916308</td>\n",
+       "      <td>10104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2010-08</td>\n",
+       "      <td>12393468</td>\n",
+       "      <td>11236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010-09</td>\n",
+       "      <td>11116463</td>\n",
+       "      <td>9983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010-10</td>\n",
+       "      <td>8933028</td>\n",
+       "      <td>10477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2010-11</td>\n",
+       "      <td>15456653</td>\n",
+       "      <td>13283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2010-12</td>\n",
+       "      <td>10358716</td>\n",
+       "      <td>12275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2011-01</td>\n",
+       "      <td>14693940</td>\n",
+       "      <td>12974</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year_month  sales_amount  customer_number\n",
+       "1     2010-02       6253663             6824\n",
+       "2     2010-03       6868320             7834\n",
+       "3     2010-04       7147388             8552\n",
+       "4     2010-05       8755929             8171\n",
+       "5     2010-06       8373124             8925\n",
+       "6     2010-07       9916308            10104\n",
+       "7     2010-08      12393468            11236\n",
+       "8     2010-09      11116463             9983\n",
+       "9     2010-10       8933028            10477\n",
+       "10    2010-11      15456653            13283\n",
+       "11    2010-12      10358716            12275\n",
+       "12    2011-01      14693940            12974"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_index_tb[1:13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>sales_amount</th>\n",
+       "      <th>customer_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2012-02</td>\n",
+       "      <td>25463522</td>\n",
+       "      <td>21875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2012-03</td>\n",
+       "      <td>20119418</td>\n",
+       "      <td>23667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2012-04</td>\n",
+       "      <td>25893403</td>\n",
+       "      <td>23565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2012-05</td>\n",
+       "      <td>22022850</td>\n",
+       "      <td>24826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2012-06</td>\n",
+       "      <td>22059480</td>\n",
+       "      <td>22390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2012-07</td>\n",
+       "      <td>23467487</td>\n",
+       "      <td>23515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2012-08</td>\n",
+       "      <td>29272775</td>\n",
+       "      <td>27095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2012-09</td>\n",
+       "      <td>31017056</td>\n",
+       "      <td>25984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2012-10</td>\n",
+       "      <td>23617191</td>\n",
+       "      <td>25813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2012-11</td>\n",
+       "      <td>29220027</td>\n",
+       "      <td>26596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2012-12</td>\n",
+       "      <td>30238780</td>\n",
+       "      <td>26831</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year_month  sales_amount  customer_number\n",
+       "25    2012-02      25463522            21875\n",
+       "26    2012-03      20119418            23667\n",
+       "27    2012-04      25893403            23565\n",
+       "28    2012-05      22022850            24826\n",
+       "29    2012-06      22059480            22390\n",
+       "30    2012-07      23467487            23515\n",
+       "31    2012-08      29272775            27095\n",
+       "32    2012-09      31017056            25984\n",
+       "33    2012-10      23617191            25813\n",
+       "34    2012-11      29220027            26596\n",
+       "35    2012-12      30238780            26831"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_index_tb[25:36]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=120, step=1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_index_tb.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
