add result of oversampling

--- a/Data-Preprocessing/006_generate.ipynb
+++ b/Data-Preprocessing/006_generate.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
     "sm = SMOTE(sampling_strategy='auto', k_neighbors=5, random_state=71)\n",
     "\n",
     "# 오버샘플링을 실행한다.\n",
-    "balance_data, balancre_target = sm.fit_sample(production_tb[['length','thickness']], production_tb['fault_flg'])\n"
+    "balance_data, balance_target = sm.fit_sample(production_tb[['length','thickness']], production_tb['fault_flg'])\n"
    ]
   },
   {
@@ -207,6 +207,151 @@
    "source": [
     "* 이 예시에서 이용하는 라이브러리에는 범줏값을 오버샘플링 할 수 없다. \n",
     "    * 범줏값을 오버샘플링 하려면 라이브러리의 내용을 변경하거나 SMOTE함수를 처음부터 만들어야 함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(production_tb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>length</th>\n",
+       "      <th>thickness</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fault_flg</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>948</td>\n",
+       "      <td>948</td>\n",
+       "      <td>948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           type  length  thickness\n",
+       "fault_flg                         \n",
+       "False       948     948        948\n",
+       "True         52      52         52"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "production_tb.groupby(['fault_flg']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1896"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(balance_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 결과 확인\n",
+    "원본 테이블에서 False는 948개, True는 52개 였는데 오버샘플링 후 True도 948개로 False데이터 개수와 같아짐 ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     948\n",
+       "False    948\n",
+       "Name: fault_flg, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Series타입 카운트 할때는 value_counts\n",
+    "balance_target.value_counts()"
    ]
   },
   {
