--- a/Data-Preprocessing/007_spread.ipynb
+++ b/Data-Preprocessing/007_spread.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4     10:30:00    2017-09-23           3        68100  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,18 +686,536 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----------\n",
+    "## 7.2 희소 행렬로의 변환\n",
+    "데이터 특성에 따라서 가로 데이터로 변환하면 데이터 크기가 커지는 경우가 있는 경우는 변환할 때 희소행렬이 되는 경우이다.<br>\n",
+    "희소행렬 (sparse matrix)은 대부분 요소의 값이 0이고 극히 일부만 값을 가지는 거대한 행렬을 말한다.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reserve_id</th>\n",
+       "      <th>hotel_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>reserve_datetime</th>\n",
+       "      <th>checkin_date</th>\n",
+       "      <th>checkin_time</th>\n",
+       "      <th>checkout_date</th>\n",
+       "      <th>people_num</th>\n",
+       "      <th>total_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>r1</td>\n",
+       "      <td>h_75</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-03-06 13:09:42</td>\n",
+       "      <td>2016-03-26</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2016-03-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>r2</td>\n",
+       "      <td>h_219</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-07-16 23:39:55</td>\n",
+       "      <td>2016-07-20</td>\n",
+       "      <td>11:30:00</td>\n",
+       "      <td>2016-07-21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>r3</td>\n",
+       "      <td>h_179</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-09-24 10:03:17</td>\n",
+       "      <td>2016-10-19</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>r4</td>\n",
+       "      <td>h_214</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-03-08 03:20:10</td>\n",
+       "      <td>2017-03-29</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2017-03-30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>194400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r5</td>\n",
+       "      <td>h_16</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-09-05 19:50:37</td>\n",
+       "      <td>2017-09-22</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2017-09-23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>68100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>r6</td>\n",
+       "      <td>h_241</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-11-27 18:47:05</td>\n",
+       "      <td>2017-12-04</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>2017-12-06</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>r7</td>\n",
+       "      <td>h_256</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-12-29 10:38:36</td>\n",
+       "      <td>2018-01-25</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2018-01-28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>r8</td>\n",
+       "      <td>h_241</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2018-05-26 08:42:51</td>\n",
+       "      <td>2018-06-08</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2018-06-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>r9</td>\n",
+       "      <td>h_217</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2016-03-05 13:31:06</td>\n",
+       "      <td>2016-03-25</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>68400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>r10</td>\n",
+       "      <td>h_240</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2016-06-25 09:12:22</td>\n",
+       "      <td>2016-07-14</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2016-07-17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>320400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>r11</td>\n",
+       "      <td>h_183</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2016-11-19 12:49:10</td>\n",
+       "      <td>2016-12-08</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2016-12-11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>r12</td>\n",
+       "      <td>h_268</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2017-05-24 10:06:21</td>\n",
+       "      <td>2017-06-20</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>2017-06-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>81600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>r13</td>\n",
+       "      <td>h_223</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2017-10-19 03:03:30</td>\n",
+       "      <td>2017-10-21</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>2017-10-23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>r14</td>\n",
+       "      <td>h_133</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2018-02-18 05:12:58</td>\n",
+       "      <td>2018-03-12</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>75600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>r15</td>\n",
+       "      <td>h_92</td>\n",
+       "      <td>c_2</td>\n",
+       "      <td>2018-04-19 11:25:00</td>\n",
+       "      <td>2018-05-04</td>\n",
+       "      <td>12:30:00</td>\n",
+       "      <td>2018-05-05</td>\n",
+       "      <td>2</td>\n",
+       "      <td>68800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   reserve_id hotel_id customer_id     reserve_datetime checkin_date  \\\n",
+       "0          r1     h_75         c_1  2016-03-06 13:09:42   2016-03-26   \n",
+       "1          r2    h_219         c_1  2016-07-16 23:39:55   2016-07-20   \n",
+       "2          r3    h_179         c_1  2016-09-24 10:03:17   2016-10-19   \n",
+       "3          r4    h_214         c_1  2017-03-08 03:20:10   2017-03-29   \n",
+       "4          r5     h_16         c_1  2017-09-05 19:50:37   2017-09-22   \n",
+       "5          r6    h_241         c_1  2017-11-27 18:47:05   2017-12-04   \n",
+       "6          r7    h_256         c_1  2017-12-29 10:38:36   2018-01-25   \n",
+       "7          r8    h_241         c_1  2018-05-26 08:42:51   2018-06-08   \n",
+       "8          r9    h_217         c_2  2016-03-05 13:31:06   2016-03-25   \n",
+       "9         r10    h_240         c_2  2016-06-25 09:12:22   2016-07-14   \n",
+       "10        r11    h_183         c_2  2016-11-19 12:49:10   2016-12-08   \n",
+       "11        r12    h_268         c_2  2017-05-24 10:06:21   2017-06-20   \n",
+       "12        r13    h_223         c_2  2017-10-19 03:03:30   2017-10-21   \n",
+       "13        r14    h_133         c_2  2018-02-18 05:12:58   2018-03-12   \n",
+       "14        r15     h_92         c_2  2018-04-19 11:25:00   2018-05-04   \n",
+       "\n",
+       "   checkin_time checkout_date  people_num  total_price  \n",
+       "0      10:00:00    2016-03-29           4        97200  \n",
+       "1      11:30:00    2016-07-21           2        20600  \n",
+       "2      09:00:00    2016-10-22           2        33600  \n",
+       "3      11:00:00    2017-03-30           4       194400  \n",
+       "4      10:30:00    2017-09-23           3        68100  \n",
+       "5      12:00:00    2017-12-06           3        36000  \n",
+       "6      10:30:00    2018-01-28           1       103500  \n",
+       "7      10:00:00    2018-06-09           1         6000  \n",
+       "8      09:30:00    2016-03-27           3        68400  \n",
+       "9      11:00:00    2016-07-17           4       320400  \n",
+       "10     11:00:00    2016-12-11           1        29700  \n",
+       "11     09:00:00    2017-06-21           4        81600  \n",
+       "12     09:30:00    2017-10-23           1       137000  \n",
+       "13     10:00:00    2018-03-15           2        75600  \n",
+       "14     12:30:00    2018-05-05           2        68800  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reserve_tb.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.sparse import csc_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>people_num</th>\n",
+       "      <th>rsv_cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c_10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>c_10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>c_10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>c_100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>c_100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>c_100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  customer_id  people_num  rsv_cnt\n",
+       "0         c_1           1        2\n",
+       "1         c_1           2        2\n",
+       "2         c_1           3        2\n",
+       "3         c_1           4        2\n",
+       "4        c_10           2        2\n",
+       "5        c_10           3        2\n",
+       "6        c_10           4        2\n",
+       "7       c_100           1        2\n",
+       "8       c_100           2        1\n",
+       "9       c_100           3        2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 고객 ID/투숙객 수별 예약 건수의 표를 생성한다.\n",
+    "cnt_tb=reserve_tb.groupby(['customer_id','people_num'])['reserve_id'].size().reset_index()\n",
+    "cnt_tb.columns=['customer_id','people_num','rsv_cnt']\n",
+    "cnt_tb.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sparseMatrix의 행과 열에 해당하는 열의 값을 범주형으로 변환한다.\n",
+    "customer_id=pd.Categorical(cnt_tb['customer_id'])\n",
+    "people_num=pd.Categorical(cnt_tb['people_num'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 첫 번째 매개변수에는 지정한 행렬에 해당하는 값, 행 번호, 열 번호의 배열을 묶은 튜플을 지정한다.\n",
+    "# shape에는 희소 행렬의 크기를 지정한다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<888x4 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 2366 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csc_matrix((cnt_tb['rsv_cnt'], (customer_id.codes, people_num.codes)),\n",
+    "          shape=(len(customer_id.categories), len(people_num.categories)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   0,   0, ..., 887, 887, 887], dtype=int16)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_id.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, ..., 1, 2, 3], dtype=int8)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people_num.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "888"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(customer_id.categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(people_num.categories)"
+   ]
   },
   {
    "cell_type": "code",
